# FarsiSearch

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  config.yaml  ir.ipynb  pyproject.toml  requirements.txt
ir/: __init__.py  cli.py  config.py  evaluation.py  index.py  preprocess.py  query.py  scoring.py
tests/: test_preprocess.py  test_query.py  test_scoring.py
