[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "information-retrieval-system"
version = "0.1.0"
description = "Information retrieval system for the Hamshahri corpus (Persian)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
authors = [
  { name = "Mazyar Ghezelji" }
]
keywords = ["information-retrieval", "persian", "hamshahri", "tf-idf", "nlp"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: Linguistic",
]
dependencies = [
  "hazm>=0.9.0",
  "numpy>=1.21.0",
  "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
]
notebook = [
  "jupyter>=1.0.0",
]

[project.scripts]
ir = "ir.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ir*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
